test/cli/test-validating-policy/operation-connect/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-ns
spec:
  containers:
  - name: nginx
    image: nginx:latest
